--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "script.js",
   "scripts": {
-    "build": "./node_modules/.bin/parcel build index.html"
+    "build": "./node_modules/.bin/parcel build index.html",
+    "deploy": "node deploy"
   },
   "repository": {
     "type": "git",
@@ -20,6 +21,7 @@
     "cssnano": "^4.1.10"
   },
   "dependencies": {
+    "ftp": "^0.3.10",
     "parcel-bundler": "^1.12.4"
   }
 }
